--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Workshop</title>
 
     <script src="https://use.fontawesome.com/34c19b2e94.js"></script>
